messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-blue
        image: your-dockerhub/messaging-app:blue
        ports:
        - containerPort: 8000
